--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,11 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21
-yarn_mappings=1.21+build.9
-loader_version=0.15.11
-publish_target_min=1.21
-publish_target_max=1.21
+minecraft_version=1.21.3
+yarn_mappings=1.21.3+build.2
+loader_version=0.16.9
+publish_target_min=1.21.3
+publish_target_max=1.21.3
 git_branch=master
 
 # Mod Properties
@@ -20,10 +20,10 @@ mod_curseforge=1006270
 mod_github=enjarai/rolling-down-in-the-deep
 
 # Dependencies
-fabric_version=0.100.7+1.21
-do_a_barrel_roll_version=3.6.1+1.21-fabric
-cicada_version=0.8.3+1.21-and-above
+fabric_version=0.110.0+1.21.3
+do_a_barrel_roll_version=3.8.1+1.21.2-fabric
+cicada_version=0.9.1+1.21.2-and-above
 # https://modrinth.com/mod/modmenu/versions#all-versions
-modmenu_version=11.0.1
+modmenu_version=12.0.0-beta.1
 # https://github.com/isXander/YetAnotherConfigLib/releases
-yacl_version=3.5.0+1.21
+yacl_version=3.6.1+1.21.2
